<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.notification.DialogActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textDialog"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAlert"
        android:textSize="16sp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDate"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTime"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnProgress"
        android:textSize="16sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCustom"
        android:textSize="16sp"
        android:textAllCaps="false"/>


</LinearLayout>
