<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.notification.RegistrationActivity"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/UserPhoto"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/user_image"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtUserName"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtPassword"
                android:textSize="16sp"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/edtRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtRePassword"
                android:textSize="16sp"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/edtAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtAddress1"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtAddress2"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtCity"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtPincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtPincode"
                android:textSize="16sp"
                android:inputType="numberDecimal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/GenderRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <RadioButton
                        android:id="@+id/MaleRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/MaleRadio"
                        android:textSize="16sp"
                        android:buttonTint="@color/colorPrimary"/>

                    <RadioButton
                        android:id="@+id/FemaleRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:text="@string/FemaleRadio"
                        android:textSize="16sp"
                        android:buttonTint="@color/colorPrimary"/>

                    <RadioButton
                        android:id="@+id/OtherRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/OtherRadio"
                        android:textSize="16sp"
                        android:buttonTint="@color/colorPrimary"/>

                </RadioGroup>

             </LinearLayout>

            <EditText
                android:id="@+id/edtmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtmail"
                android:textSize="16sp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtMobile"
                android:textSize="16sp"
                android:inputType="numberDecimal"
                android:maxLength="10" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
