<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.notification.MainActivity">

    <TextView
        android:id="@+id/textHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textHome"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnHomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/btnHomeRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_centerInParent="true"
        android:layout_below="@id/btnHomeLogin"/>

</RelativeLayout>
